# bedmap-dev

./: .gitattributes  .gitignore  LICENSE_Addl_Yale  README.md  pyproject.toml  settings.ini
nbs/: 001_config.ipynb  002_pipeline.ipynb  002_step.ipynb  00_bedmap.ipynb  011_prepare-images.ipynb  011_process-images.ipynb  012_validate-images.ipynb  013_create-thumbnails.ipynb  014_embed-images.ipynb  01_utils.ipynb  021_create-umap-layout.ipynb  02_compare.ipynb  031_scaffold_output.ipynb  032_manifests.ipynb  03_images.ipynb  04_embeddings.ipynb  051_main.ipynb  05_layouts.ipynb  06_web_config.ipynb  07_metadata.ipynb  08_from_tables.ipynb  09_daft-try.ipynb  101_test-end-to-end.ipynb  index.ipynb  nbdev.yml  notes.md
nbs-daft-testing/: 10_daft-thumbs.ipynb  11d_daft-embeddings-twostep.ipynb  17_torch-embs_try02.ipynb  19_torch-embs_daft-to-torch-iter.ipynb  20_compare-daft-to-torch-data.ipynb  21_compare-daft-to-torch-data_clean.ipynb  22_daft-data_concurrency.ipynb  24_daft-udf_print-on-init.ipynb  30_daft-inference-udf-no-concur.ipynb  40_hf-pipe-image-features.ipynb  41_hf-pipe-image-features_hfds.ipynb  _ipython-input-20-profile
nbs-old/: 00_bedmap.ipynb  03_images.ipynb  04_embeddings.ipynb  05_layouts.ipynb  06_web_config.ipynb  08_from_tables.ipynb
nbs/daft-try/: 09_daft-validate.ipynb  10_daft-thumbs.ipynb  11_daft-embeddings.ipynb  11c_daft-embeddings-OOM-repro.ipynb  11d_daft-embeddings-twostep.ipynb  11e_daft-embeddings_small-morsels.ipynb  11f_daft-embeddings_small-morsels.ipynb  14_torch-embeddings.ipynb  15_torch-embeddings-profiled.ipynb  16_torch-embeddings-for-memray.ipynb  17_torch-embs_try02.ipynb  18_daft-embs_FromTry02.ipynb  19_torch-embs_daft-to-torch-iter.ipynb  19_torch-embs_daft-to-torch-iter.py  20_compare-daft-to-torch-data.ipynb  21_compare-daft-to-torch-data_clean.ipynb  23_daft-udf-with-pillow-open.ipynb  profile-scalene-daftdset01.json  profile-scalene-torchdset01.json
output_2/: index.html
output_2/assets/css/: style.css
output_2/assets/js/: tsne.js
output_2/data/image-vectors/inception/: 0dae7d86-9c14-11ed-a00f-a37ce258aeb3.jpg.npy  30aeb051d-ee0d-4c5b-8a85-a8da7baef5fd.jpg.npy  31fd87d81-7ff5-4e50-b718-0d4a259d47c1.jpg.npy  329a4c094-8536-4396-be70-3d9b5d0744d9.jpg.npy  329c2b4d5-8137-414b-b98e-ff04907e8ea6.jpg.npy  354747d21-638c-4e23-a655-c0bb4de18941.jpg.npy  36829498c-0eda-4c84-b89d-c893c75cfa68.jpg.npy  376dd3835-ea28-48ab-b7e8-c7c929a77a01.jpg.npy  386168016-7276-4b02-b713-5f36ac2ef452.jpg.npy  3c3407493-e0d9-43fe-a2a2-7c43395c90c5.jpg.npy  3fee89f9b-ba5c-4f2e-8532-6e390e2cf0c9.jpg.npy  9fea3150-a3d4-11ed-aeea-e36f1256f233.jpg.npy
output_2/data/layouts/: rasterfairy-eb0ded7a-dc5d-11ef-8000-00155d0db0ea.json  umap-n_neighbors_15-min_dist_0.01-44320fdc-dc5c-11ef-8000-00155d0db0ea.json
src/: pyproject.toml
src/bedmap/: _modidx.py  bedmap.py  compare.py  config.py  create_thumbnails.py  create_umap_layout.py  embed_images.py  embeddings.py  from_tables.py  images.py  layouts.py  main.py  manifests.py  metadata.py  pipeline.py  prepare_images.py  scaffold_output.py  step.py  test_end_to_end.py  utils.py  validate_images.py  web_config.py
src/bedmap/web/: index.html
src/bedmap/web/assets/images/: cp_logo_v03b.svg:Zone.Identifier
src/bedmap/web/assets/js/: tsne.js
tests/test-data/butterflies_baseline/: index.html
tests/test-data/butterflies_baseline/assets/js/: tsne.js
tests/test-data/butterflies_baseline/data/: manifest.json
tests/test-data/smithsonian_butterflies_10/embeds_chunked/: clip_on_butterflies.ipynb
